[package]
name = "timeouts"
version = "0.1.0"
authors = ["Ben Aubin <ben@benaubin.com>"]
edition = "2018"
license = "MIT"
description = "Timeouts on operating system clocks"
homepage = "https://github.com/benaubin/timeouts"
repository = "https://github.com/benaubin/timeouts"
documentation = "https://docs.rs/timeouts"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["time", "macros", "sync", "rt-threaded"] }
os_clock = "0.3.1"
futures = "0.3.5"
